rust/crates/rax/src/string/rules/snapshots/rax__string__rules__one_in_char_set__tests__ascii_no_match.snap
---
source: crates/rax/src/string/rules/one_in_char_set.rs
expression: result
---
Err(
    RuleError {
        reason: "character not in set",
    },
)
