rust/crates/rax/src/string/rules/snapshots/rax__string__rules__one_in_char_set__tests__empty_input.snap
---
source: crates/rax/src/string/rules/one_in_char_set.rs
expression: result
---
Err(
    RuleError {
        reason: "empty input",
    },
)
